# API-server

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  compose.yml  dashboard.py  dboard.py  demo.txt  main.py  pyproject.toml
assets/: Co-authors.txt
content/: health.html
frontend/: dboard.py
modules/LLM/: Groq.py
modules/scrapper/: BaseScrapper.py  InstaScrapper.py  TwitterScrapper.py
routes/: health.py  internal.py  metrics.py  service.py
scripts/: clean_demo.py  scrapper.py  test_caption_validation.py  test_url_validation.py
templates/: health.html  metrics.html
utils/: config.py  device.py  functions.py  healthChecker.py  metrics.py  router.py  text_cleaning.py  validations.py  worker.py
