[project]
name = "api-server"
version = "0.1.0"
description = "ASGI server that handles requests for SocioLens"
authors = [
  { name = "Ananth Sankar", email = "ananthsankar2003@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4>=4.14.2",
    "fastapi>=0.120.4",
    "jinja2>=3.1.6",
    "lxml>=6.0.2",
    "numpy>=2.2.6",
    "pydantic>=2.12.3",
    "torch>=2.9.0",
    "transformers>=4.57.1",
    "uvicorn>=0.38.0",
]
