[project]
name = "api-server"
version = "0.1.0"
description = "ASGI server that handles requests for SocioLens"
authors = [
  { name = "Ananth Sankar", email = "ananthsankar2003@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4>=4.14.2",
    "fastapi>=0.120.4",
    "groq>=0.34.1",
    "instaloader>=4.15",
    "jinja2>=3.1.6",
    "lxml>=6.0.2",
    "numpy>=2.2.6",
    "plotly>=6.4.0",
    "pydantic>=2.12.3",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "slowapi>=0.1.9",
    "streamlit>=1.51.0",
    "torch>=2.9.0",
    "transformers>=4.57.1",
    "twikit>=2.3.3",
    "uvicorn>=0.38.0",
]
